magit (4.1.3-1) UNRELEASED; urgency=medium

  * New upstream release
  * Add d/gbp.conf matching the current practice
  * Refresh patches for the new version

 -- Xiyue Deng <manphiz@gmail.com>  Mon, 09 Dec 2024 18:54:17 -0800

magit (4.1.2-2) unstable; urgency=medium

  [ Xiyue Deng ]
  * Migrate elpa-git-commit into elpa-magit (Closes: #1086758)
    - git-commit has become part of magit since 4.1.0
    - Move install files from elpa-git-commit to elpa-magit
    - d/control: make elpa-git-commit a transitional package
  * Add myself to uploaders
  * d/control: enable "Testsuite: autopkgtest-pkg-elpa"
  * d/watch: modernize using substitute strings to be more robust

  [ Aymeric Agon-Rambosson ]
  * d/rules: Remove DEB_VERSION_UPSTREAM environment variable.
  * d/control:
    - Update Build-Depends versions.
    - elpa-magit: add Provides: elpa-git-commit.

 -- Xiyue Deng <manphiz@gmail.com>  Tue, 05 Nov 2024 09:44:45 -0800

magit (4.1.2-1) unstable; urgency=medium

  * New upstream release
  * Forward port quilt patches

 -- Barak A. Pearlmutter <bap@debian.org>  Sat, 02 Nov 2024 23:00:17 +0000

magit (4.1.1-1) unstable; urgency=medium

  [ Barak A. Pearlmutter ]
  * New upstream release
  * Forward port quilt patches
  * Bump standards version

  [ Aymeric Agon-Rambosson ]
  * Drop temporary patch to reformat Package-Requires multiline header. We
    now need dh-elpa with minimal 2.1.2 version.
  * Remove explicit versioned dependencies on elpa-transient for binary
    packages (dh-elpa correctly adds them).
  * Update explicit versioned build dependencies (needed for tests).
  * Reinstate DEB_VERSION_UPSTREAM environment variable (git-commit.el
    specifies no Version header).

 -- Barak A. Pearlmutter <bap@debian.org>  Fri, 01 Nov 2024 15:01:12 +0000

magit (3.3.0+git20240412.1.da14749d-2) unstable; urgency=medium

  * Team upload.
  * d/patches: define committer info for git-commit in tests
    (Closes: #1073473)