@@ -4,8 +4,9 @@
 	dh $@ --with elpa
 
 override_dh_auto_build:
-	$(MAKE) info html pdf
-	@echo do not run make
+	@echo "Targets info, html, and pdf all build texi, so serialize to avoid a race condition."
+	$(MAKE) texi
+	$(MAKE) -j1 info html pdf
 
 override_dh_auto_install:
 	@echo do not run make install
