@@ -1,10 +1,14 @@
 magit (4.1.3-1) UNRELEASED; urgency=medium
 
+  [ Xiyue Deng ]
   * New upstream release
   * Add d/gbp.conf matching the current practice
   * Refresh patches for the new version
 
- -- Xiyue Deng <manphiz@gmail.com>  Mon, 09 Dec 2024 18:54:17 -0800
+  [ Barak A. Pearlmutter ]
+  * Avoid race condition in building documentation from debian/rules
+
+ -- Barak A. Pearlmutter <bap@debian.org>  Tue, 10 Dec 2024 09:59:06 +0000
 
 magit (4.1.2-2) unstable; urgency=medium
 
